completed auth system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/calorietracker
 spring.datasource.username=uzer
 spring.datasource.password=pazzword
+
+#App properties
+francofitness.calorietracker.jwtSecret=stayfit
